1999-03-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* FArguments.[hm], FCall.[hm]: Rename argSwarmTypes -> argTypes
	and argTypes -> ffiArgTypes.  Likewise for returns.
	Add support for selectors.

1999-03-23  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* FArguments.m ([FArguments -mapAllocations:]): Map argSwarmTypes.

	* defobj.h (FCall): Mark phases in FCall protocol.
	
	* FArguments.h: Put swarm types into a enum.
	(FArguments): Two new instance variables argSwarmTypes and
	returnSwarmType.

	* FArguments.m (FArguments): Use new instance variables 
	argSwarmTypes and returnSwarmTypes to store swarm types.
	Modify swarm_types array in such way that 
	swarm_types[swarm_float_type] == &ffi_type_double to
	avoid the ffi related bug.
	([FArguments -addFloat:]): Call ADD_COMMON with float type.

	* FCall.m (FCall_c): Insert Phase markers.
	Move createEnd into the creating phase.
	Move fillHiddenArguments in front of createEnd.
	
1999-03-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* defobj.h (FCall): Add getReturnVal.

	* FArguments.[hm] ([FArguments -addArgument:ofObjCType:], 
	[FArguments -setObjCReturnType:]): New methods.
	([FArguments -_setReturnType_:]): Renamed from setReturnType:.
	([FArguments -_addArgument_:ofType:]): Renamed from

	* FArguments.h: Include objc/objc.h.
	(swarm_type_object): Renamed from swarm_type_pointer.

	* FCall.m (defobj_init_java_call_tables): Accomodate.

	* FCall.[hm] ([FArguments -getReturnVal:]): New method.

	* FCall.h, FArguments.h: Move JOBJECT to FCall.h.

	* FArguments.[hm] ([FArguments -addUnsignedChar:], 
	[FArguments -addUnsignedShort:], [FArguments -addUnsigned:],
	[FArguments -addUnsignedLong:]): New methods.

	* FArguments.m (ADD_COMMON): Add type and value assignment to macro.

1999-03-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* FCall.m (fillHiddenArguments): Make static.

	* FCall.[hm], FArguments.m: Avoid libffi things.

1999-03-19  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
